src/app/features/board/page/board-page/board-page.component.scss
.board {
  overflow-y: auto;
  width: 100%;

  &__header {
    width: 100%;
    height: auto;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    align-items: center;
    padding: 80px 88px 50px 64px;
  }
  &__header-headline {
    display: flex;
    justify-content: space-between;
  }
  &__search-container {
    display: flex;
    gap: 32px;
  }
  &__search-field {
    display: flex;
    gap: 16px;
    align-items: center;
    background-color: var(--white);
    border: solid 1px var(--gray);
    padding: 8px 16px;
    border-radius: 10px;

    input {
      border: none;
      height: 100%;
      font-size: 20px;
      &:focus {
        outline: none;
      }
      ::placeholder {
        font-size: 20px;
      }
    }
  }
  &__separator {
    background-color: var(--lightgray);
    width: 1px;
    height: 32px;
  }
  &__kanban {
    width: 100%;
    height: 100%;
    display: flex;
    gap: 26px;
    padding: 0px 64px;
  }
  &__container {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    gap: 16px;
  }
  &__container-headline {
    display: flex;
  }
  &__notask {
    display: flex;
    justify-content: center;
    background: var(--lightgray);
    padding: 16px;
    border-radius: 10px;
    border: dashed 3px var(--gray);
    color: var(--gray);
  }
  &__container-cards {
    display: flex;
    flex-direction: column;
    border-radius: 24px;
    border: dashed 3px transparent;
    transition: border-color 0.2s ease;
    padding-bottom: 24px;

    &--active {
      border-color: var(--gray);
      background-color: rgba(128, 128, 128, 0.05);
    }
    gap: 16px;
  }
  &__card-container {
    display: flex;
    flex-direction: column;
    background: var(--white);
    padding: 16px;
    border-radius: 24px;
    gap: 24px;
    filter: drop-shadow(var(--drop-shadow));
  }
  &__card-category {
    background: var(--primary);
    padding: 4px 16px;
    width: fit-content;
    color: var(--white);
    border-radius: 8px;
  }
  &__card-content {
    display: flex;
    flex-direction: column;
    gap: 8px;

    &__card-headline {
      color: var(--primary);
      font-weight: 700;
    }
    &__card-description {
      color: var(--gray);
    }
  }
  &__card-tools {
    display: flex;
    flex-direction: column;
    gap: 24px;
  }
  &__card-tools-first {
    display: flex;
    gap: 10px;
    justify-content: space-between;
  }
  &__card-taskbar {
    width: 100%;
    border-radius: 10px;
    background: var(--lightgray);
    gap: 5px;
  }
  &__card-tools-second {
    display: flex;
    justify-content: space-between;
  }
  &__card-initials {
    background: red;
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--white);
    height: 32px;
    width: 32px;
    border-radius: 100%;
    border: solid 1px var(--white);
  }
}

